<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/app_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.ood.waterball.teampathy.MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/testimg"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/app_textword_color"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:hint="@string/Inputaccount"
        android:textColorHint="@color/app_hint_color"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@drawable/corner_button"
        android:layout_marginBottom="10dp"
        android:id="@+id/inputAccount_Main" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:hint="@string/Inputpassword"
        android:textColorHint="@color/app_hint_color"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@drawable/corner_button"
        android:layout_marginBottom="10dp"
        android:id="@+id/inputPassword_Main"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/app_textword_color"
            android:text="@string/forgotPassword"
            android:onClick="forgotOnClick"/>
        <View
            android:layout_width="3dp"
            android:layout_height="24dp"
            android:background="@drawable/verticle_line"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/app_textword_color"
            android:text="@string/register"
            android:onClick="registerOnClick"/>
    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/corner_button"
        android:text="@string/logIn"
        android:textColor="@color/app_button_word_color"
        android:onClick="logInOnClickMain"/>




</LinearLayout>
