<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollview_issue_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:layout_weight=".70"
                app:cardElevation="50dp"
                app:contentPadding="15dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/app_textword_color"
                android:transitionName="@string/card_transitionname"
                tools:targetApi="lollipop">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:minHeight="200dp">
                    <LinearLayout android:layout_width="match_parent"
                        android:layout_height="@dimen/member_head_picture_size"
                        android:orientation="horizontal">
                        <FrameLayout
                            android:layout_width="@dimen/member_head_picture_size"
                            android:layout_height="@dimen/member_head_picture_size"
                            android:id="@+id/card_frame_workline_item">
                            <ProgressBar
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/progressbar_issuedetailItem"/>
                            <ImageView
                                android:layout_width="@dimen/member_head_picture_size"
                                android:layout_height="@dimen/member_head_picture_size"
                                android:id="@+id/poster_picture_issue_details"
                                android:scaleType="fitCenter"/>
                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/member_head_picture_size"
                            android:orientation="vertical"
                            android:layout_marginLeft="7dp">
                            <TextView style="@style/TeamPathyTextView"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight=".50"
                                android:text="怎麼樣才能Woo到心儀對象呢?"
                                android:gravity="bottom"
                                android:textSize="18sp"
                                android:textColor="@color/app_black_word_color"
                                android:id="@+id/title_issue_details"
                                android:transitionName="@string/issue_title_transitionname"/>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight=".5">
                                <TextView style="@style/TeamPathyTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:gravity="bottom"
                                    android:text="2017 23 Apr."
                                    android:textSize="16sp"
                                    android:textColor="@color/app_hint_color"
                                    android:id="@+id/postdate_issue_details"
                                    android:transitionName="@string/issue_title_transitionname"/>
                                <TextView style="@style/TeamPathyTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentRight="true"
                                    android:layout_alignParentEnd="true"
                                    android:gravity="bottom"
                                    android:text="議題"
                                    android:textSize="18sp"
                                    android:textColor="#4b4b4b"
                                    android:id="@+id/issuetype_issue_details"
                                    android:transitionName="@string/issue_title_transitionname"/>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:textSize="18sp"
                        android:textColor="@color/issue_content_color"
                        android:text="1"
                        android:transitionName="@string/issue_content_transitionname"
                        android:id="@+id/issue_content_issue_details" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:id="@+id/recycler_issue_details">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_issue_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>